deploy_in_kops.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ib-deployment
  labels:
    app: ib_deploy # Specifies the label for the deployment, which can be used for selection and organization of resources.
spec:
  replicas: 3 
  selector: 
    matchLabels:  
      app: bank # Specifies the label selector for the deployment, which determines which pods are managed by this deployment.
  template:
    metadata:
      labels:
        app: bank # Specifies the label for the pod template, which can be used for selection and organization of resources.
    spec:
      containers:
      - name: cont2
        image: eswar120699/ib-image:latest


# kubectl create -f deploy_in_kops.yml
# kubectl get deployments
# kubectl get pods
# kubectl get pods -o wide -here we can see the node name where the pod is running
# vi deploy_in_kops.yml and change replicas=4 or 
# kubectl scale deployment ib-deployment --replicas=4
# kubectl delete deployment ib-deployment or kubectl delete -f deploy_in_kops.yml
