deploy_pvc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ib-deployment
  labels:
    app: ib_deploy
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: bank
  template:
    metadata:
      labels:
        app: bank
    spec:
      containers:
      - name: cont2
        image: centos:latest
        volumeMounts:
        - name: my-pv # Specifies the name of the volume to be mounted, which should match the name defined in the volumes section.
          mountPath: "/tmp/data" # Specifies the path inside the container where the persistent volume will be mounted.     
      volumes:
      - name: my-pv # Specifies the name of the volume, which should match the name used in the volumeMounts section.
        persistentVolumeClaim:
          claimName: my-pvc # Specifies the name of the PersistentVolumeClaim to be used for this volume, which should match the name defined in the PersistentVolumeClaim configuration.
