nodeport.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ib-deployment
  labels:
    app: bank # Specifies the label for the deployment, which can be used for selection and organization of resources.
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bank # Specifies the label selector for the deployment, which determines which pods are managed by this deployment.
  template:
    metadata:
      labels:
        app: bank # Specifies the label for the pod template, which can be used for selection and organization of resources.  
    spec:
      containers:
      - name: cont1
        image: eswar120699/ib-image:latest
