pod creation.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample-pod
spec:
  containers:
    - name: nginx-container
      image: nginx:latest


# apiVersion: v1
# kind: Pod  -- creating pod
# metadata:
#    name: pod1  -- name of the pod
# spec:     --specifications
#    containers:
#      - image: nginx   -- image name
#        name: cont1   -- container name
